[project]
name = "videogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.38.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python>=4.13.0.92",
    "protobuf>=7.35.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers>=5.12.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
